@@ -131,7 +131,9 @@ namespace kt
 		SetMaxRate(Core* tc, Type t, QWidget *parent); 
 		virtual ~SetMaxRate();
 	
+	public slots:
 		void update();
+		
 	private:
 		void makeMenu();
 
